kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: spoticloud.azurecr.io/frontend/spoticloud
        ports:
        - containerPort: 3000
          hostPort: 3000
          protocol: TCP
      restartPolicy: Always
