kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-service
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: frontend
