kubernetes/music-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: music-db
  name: music-db-service
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app: music-db
