kubernetes/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq-service
spec:
  ports:
    - name: "5672"
      port: 5672
      targetPort: 5672
    - name: "51672"
      port: 15672
      targetPort: 15672
  selector:
    app: rabbitmq
