kubernetes/session-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-service
spec:
  ports:
    - protocol: TCP
      port: 5179
      targetPort: 80
  selector:
    name: session-service
